k8s/full_tutorial_nana/004_ingress/myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
